Restrict label length to 40 chars
Closes #199

--- a/src/components/editor/addConceptModal.html
+++ b/src/components/editor/addConceptModal.html
@@ -6,7 +6,7 @@
 
       <editable title="Concept">
         <div class="input-group input-group-md">
-          <input id="conceptLabel" type="text" class="form-control" autofocus required string-input ng-model="ctrl.conceptLabel" />
+          <input id="conceptLabel" type="text" class="form-control" autofocus required string-input="label" ng-model="ctrl.conceptLabel" />
         </div>
       </editable>
 
@@ -18,7 +18,7 @@
 
       <editable title="{{ctrl.labelTitle}}">
         <div class="input-group input-group-md">
-          <input id="name" type="text" class="form-control" required string-input ng-model="ctrl.label" />
+          <input id="name" type="text" class="form-control" required string-input="label" ng-model="ctrl.label" />
         </div>
       </editable>
 
