--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -1,5 +1,5 @@
 <editable title="Class label">
-  <input id="classLabel" class="form-control" type="text" localized-input="required" ng-model="ctrl.class.label"/>
+  <input id="classLabel" class="form-control" type="text" localized-input="label" ng-model="ctrl.class.label"/>
 </editable>
 
 <editable title="Id">
