--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -1,5 +1,5 @@
 <editable title="{{ctrl.labelName}}">
-  <input id="predicateName" class="form-control" type="text" localized-input="required" ng-model="ctrl.predicate.label" />
+  <input id="predicateName" class="form-control" type="text" localized-input="label" ng-model="ctrl.predicate.label" />
 </editable>
 
 <editable title="Id">
