--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -37,7 +37,7 @@
         <div ng-if="ctrl.newCreation">
           <editable title="{{ctrl.labelTitle}}">
             <div class="input-group input-group-md">
-              <input id="name" type="text" class="form-control" required string-input ng-model="ctrl.label" />
+              <input id="name" type="text" class="form-control" required string-input="label" ng-model="ctrl.label" />
             </div>
           </editable>
         </div>
