--- a/src/components/form/errorMessages.html
+++ b/src/components/form/errorMessages.html
@@ -9,5 +9,6 @@
     <li ng-message="requiredLocalized">{{'Required localized error' | translate}}</li>
     <li ng-message="duplicate">{{'Duplicate error' | translate}}</li>
     <li ng-message="string">{{'String error' | translate}}</li>
+    <li ng-message="length">{{'Length error' | translate}}</li>
   </ul>
 </div>
