--- a/src/components/model/addRequireModal.html
+++ b/src/components/model/addRequireModal.html
@@ -6,7 +6,7 @@
 
       <editable title="Label">
         <div class="input-group input-group-md">
-          <input id="label" type="text" class="form-control" autofocus required string-input ng-model="ctrl.label" />
+          <input id="label" type="text" class="form-control" autofocus required string-input="label" ng-model="ctrl.label" />
         </div>
       </editable>
 
