--- a/src/components/group/addModelModal.html
+++ b/src/components/group/addModelModal.html
@@ -5,13 +5,13 @@
   <modal-body>
     <editable title="Prefix">
       <div class="input-group input-group-md">
-        <input id="prefix" type="text" class="form-control" autofocus required string-input ng-model="ctrl.prefix" />
+        <input id="prefix" type="text" class="form-control" autofocus required string-input="label" ng-model="ctrl.prefix" />
       </div>
     </editable>
 
     <editable title="Label">
       <div class="input-group input-group-md">
-        <input id="name" type="text" class="form-control" required string-input ng-model="ctrl.label" />
+        <input id="name" type="text" class="form-control" required string-input="label" ng-model="ctrl.label" />
       </div>
     </editable>
   </modal-body>
