--- a/src/components/group/group.html
+++ b/src/components/group/group.html
@@ -13,7 +13,7 @@
 
       <div class="col-md-6">
         <editable title="Group label">
-          <input id="groupLabel" class="form-control" type="text" localized-input="required" ng-model="ctrl.editableInEdit.label" />
+          <input id="groupLabel" class="form-control" type="text" localized-input="label" ng-model="ctrl.editableInEdit.label" />
         </editable>
 
         <editable title="Comment">
