--- a/src/components/model/modelView.html
+++ b/src/components/model/modelView.html
@@ -13,7 +13,7 @@
 
       <div class="col-md-6">
         <editable title="Model label">
-          <input id="modelLabel" class="form-control" type="text" localized-input="required" ng-model="ctrl.editableInEdit.label" />
+          <input id="modelLabel" class="form-control" type="text" localized-input="label" ng-model="ctrl.editableInEdit.label" />
         </editable>
 
         <non-editable title="Namespace" value="ctrl.editableInEdit.namespace"></non-editable>
