--- a/src/components/model/addRequireModal.html
+++ b/src/components/model/addRequireModal.html
@@ -12,7 +12,7 @@
 
       <editable title="Namespace">
         <div class="input-group input-group-md">
-          <input id="namespace" class="form-control" required namespace-input string-input ng-model="ctrl.namespace" />
+          <input id="namespace" type="text" class="form-control" required namespace-input string-input ng-model="ctrl.namespace" />
         </div>
       </editable>
 
