Require old value for id input but only validate if old is not unsaved

--- a/src/components/editor/searchClassModal.html
+++ b/src/components/editor/searchClassModal.html
@@ -40,7 +40,7 @@
 
       <div class="col-md-4 search-selection">
         <form class="editable-form">
-          <class-form ng-if="ctrl.selectedClass" class="ctrl.selectedClass" model="ctrl.model"></class-form>
+          <class-form ng-if="ctrl.selectedClass" class="ctrl.selectedClass" old-class="ctrl.selectedClass" model="ctrl.model"></class-form>
         </form>
       </div>
 
