--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -61,7 +61,7 @@
         </div>
 
         <div class="col-md-4 search-selection">
-          <predicate-form ng-if="ctrl.selectedPredicate" predicate="ctrl.selectedPredicate" model="ctrl.model"></predicate-form>
+          <predicate-form ng-if="ctrl.selectedPredicate" predicate="ctrl.selectedPredicate" old-predicate="ctrl.selectedPredicate" model="ctrl.model"></predicate-form>
           <submit-error-panel error="ctrl.submitError"></submit-error-panel>
         </div>
 
