Fix problems with shrink+float by removing float

--- a/src/components/editor/selectionView.html
+++ b/src/components/editor/selectionView.html
@@ -24,7 +24,7 @@
 </div>
 
 <div ng-if="!ctrl.hideVisualization" ng-class="ctrl.classForVisualization()">
-  <div class="component" float top-offset="8">
+  <div class="component" top-offset="8">
     <div class="component-header">
       <h3>
         <span class="glyphicon glyphicon-th"></span>
