Catch model creator errors already in the dialog before trying the edit mode
Closes #207

--- a/src/components/group/addModelModal.html
+++ b/src/components/group/addModelModal.html
@@ -17,6 +17,8 @@
   </modal-body>
 
   <modal-buttons>
+    <submit-error-panel error="ctrl.submitError"></submit-error-panel>
+
     <button class="btn btn-default" type="button" ng-click="ctrl.cancel()" translate>Cancel</button>
     <button class="btn btn-default" type="button" ng-click="ctrl.create()" ng-disabled="!addModelForm.$valid" translate>Create new</button>
   </modal-buttons>
