Restrict duplicate property names

--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -40,6 +40,6 @@
               ng-click="ctrl.movePropertyDown($event, property)"></span>
       </div>
     </uib-accordion-heading>
-    <property-view property="property" model="ctrl.model"></property-view>
+    <property-view property="property" class="ctrl.class" model="ctrl.model"></property-view>
   </uib-accordion-group>
 </uib-accordion>
