Validate class against pascal case and predicate against camel case

--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -3,7 +3,7 @@
 </editable>
 
 <editable title="Id">
-  <input id="predicateId" class="form-control" type="text" required id-input old="ctrl.oldPredicate" ng-model="ctrl.predicate.curie" ng-disabled="!ctrl.inUnstableState" />
+  <input id="predicateId" class="form-control" type="text" required id-input="predicate" old="ctrl.oldPredicate" ng-model="ctrl.predicate.curie" ng-disabled="!ctrl.inUnstableState" />
 </editable>
 
 <editable title="Comment">
