--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -3,7 +3,7 @@
 </editable>
 
 <editable title="Id">
-  <input id="classId" class="form-control" type="text" required id-input old="ctrl.oldClass" ng-model="ctrl.class.curie" ng-disabled="!ctrl.inUnstableState" />
+  <input id="classId" class="form-control" type="text" required id-input="class" old="ctrl.oldClass" ng-model="ctrl.class.curie" ng-disabled="!ctrl.inUnstableState" />
 </editable>
 
 <editable title="Comment">
