--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -11,7 +11,7 @@
 </editable>
 
 <editable title="Superclass" link="ctrl.linkToSubclass()">
-  <curie-select id="superClass" type="class" curie="ctrl.class.subClassOf" model="ctrl.model"></curie-select>
+  <curie-select id="superClass" type="class" curie="ctrl.class.subClassOf" model="ctrl.model" after-selected="ctrl.addPropertiesFromSuperClass(id)"></curie-select>
 </editable>
 
 <editable-multiple-curie-select id="equivalentClass" type="class" curies="ctrl.class.equivalentClasses" model="ctrl.model"></editable-multiple-curie-select>
