--- a/src/components/form/errorMessages.html
+++ b/src/components/form/errorMessages.html
@@ -11,5 +11,6 @@
     <li ng-message="duplicate">{{'Duplicate error' | translate}}</li>
     <li ng-message="string">{{'String error' | translate}}</li>
     <li ng-message="length">{{'Length error' | translate}}</li>
+    <li ng-message="prefix">{{'Prefix error' | translate}}</li>
   </ul>
 </div>
