--- a/src/components/group/addModelModal.html
+++ b/src/components/group/addModelModal.html
@@ -5,7 +5,7 @@
   <modal-body>
     <editable title="Prefix">
       <div class="input-group input-group-md">
-        <input id="prefix" type="text" class="form-control" autofocus required string-input="label" ng-model="ctrl.prefix" />
+        <input id="prefix" type="text" class="form-control" autofocus required string-input="prefix" ng-model="ctrl.prefix" />
       </div>
     </editable>
 
