--- a/src/components/model/addRequireModal.html
+++ b/src/components/model/addRequireModal.html
@@ -12,13 +12,13 @@
 
       <editable title="Namespace">
         <div class="input-group input-group-md">
-          <input id="namespace" type="text" class="form-control" required namespace-input string-input ng-model="ctrl.namespace" />
+          <input id="namespace" type="text" class="form-control" required string-input="namespace" ng-model="ctrl.namespace" />
         </div>
       </editable>
 
       <editable title="Prefix">
         <div class="input-group input-group-md">
-          <input id="prefix" type="text" class="form-control" required string-input ng-model="ctrl.prefix" />
+          <input id="prefix" type="text" class="form-control" required string-input="prefix" ng-model="ctrl.prefix" />
         </div>
       </editable>
 
