Allow longer label for model

--- a/src/components/group/addModelModal.html
+++ b/src/components/group/addModelModal.html
@@ -11,7 +11,7 @@
 
     <editable title="Label">
       <div class="input-group input-group-md">
-        <input id="name" type="text" class="form-control" required string-input="label" ng-model="ctrl.label" />
+        <input id="name" type="text" class="form-control" required string-input="modelLabel" ng-model="ctrl.label" />
       </div>
     </editable>
   </modal-body>
