--- a/src/components/model/requiresView.html
+++ b/src/components/model/requiresView.html
@@ -11,7 +11,7 @@
             ng-click="modelViewController.removeRequire(require)" translate>Delete require</button>
 
     <editable title="Label" disable="!require.modifiable">
-      <input type="text" class="form-control" localized-input="label" ng-model="require.label" />
+      <input type="text" class="form-control" localized-input="modelLabel" ng-model="require.label" />
     </editable>
 
     <editable title="Namespace" disable="!require.modifiable">
