--- a/src/app.scss
+++ b/src/app.scss
@@ -13,6 +13,10 @@
 $selectionListWidth: 275px;
 $footer-height: 40px;
 
+.logo {
+  font-size: x-large;
+}
+
 .panel-footer {
   position: fixed;
   bottom: 0;
