--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -5,7 +5,7 @@
   <span class="pull-right">
     <span ng-show="ctrl.gitHash && ctrl.gitDate">
       {{'Version' | translate}}
-      <a ng-href="{{'https://github.com/CSC-IT-Center-for-Science/iow-ui/commits/' + ctrl.gitHash}}">{{ctrl.gitDate | date : 'dd.MM.yyyy HH:mm'}}</a>
+      <a ng-href="{{'https://github.com/CSC-IT-Center-for-Science/iow-ui/commits/' + ctrl.gitHash}}">{{ctrl.gitDate.format('DD.MM.YYYY HH:mm')}}</a>
     </span>
 
     {{'Source code' | translate}}:
