--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -1,6 +1,6 @@
 <div class="panel-footer">
 
-  <span>{{'Contact info' | translate}} <a href="https://www.csc.fi/" translate>CSC - IT Center for Science Ltd</a></span>
+  <span>{{'Contact info' | translate}} <a href="mailto:iow@postit.csc.fi" translate>CSC - IT Center for Science Ltd</a></span>
 
   <span class="pull-right">
     <span ng-show="ctrl.gitHash && ctrl.gitDate">
