Class property association is mandatory when status is not "Unstable"
Closes #204

--- a/src/components/form/editable.html
+++ b/src/components/form/editable.html
@@ -6,5 +6,5 @@
     <a ng-show="ctrl.item.showLink" ng-href="{{ctrl.item.href}}">{{ctrl.item.displayValue}}</a>
     <span ng-show="ctrl.item.showPlain" >{{ctrl.item.displayValue}}</span>
   </div>
-  <error-messages ng-model-controller="ctrl.ngModelController"></error-messages>
+  <error-messages ng-model-controller="ngModel"></error-messages>
 </div>
