--- a/src/components/common/deleteConfirmationModal.html
+++ b/src/components/common/deleteConfirmationModal.html
@@ -4,7 +4,7 @@
 
     <div ng-if="ctrl.usage.referrers.length > 0">
       <p><span translate>Following items are depending on the deleted</span> <span>{{'of ' + ctrl.entity.type | translate}}</span></p>
-      <usages usage="ctrl.usage"></usages>
+      <usage usage="ctrl.usage"></usage>
       <br />
     </div>
 
