Usages panel for classes and predicates
Closes #225

--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -43,3 +43,5 @@
     <property-view property="property" class="ctrl.class" model="ctrl.model"></property-view>
   </uib-accordion-group>
 </uib-accordion>
+
+<usage-panel id="ctrl.class.id"></usage-panel>
