--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -31,3 +31,5 @@
 </editable>
 
 <editable-subject-select references="ctrl.model.references" type="{{ctrl.predicate.type}}" subject="ctrl.predicate.subject" disable="!ctrl.inUnstableState"></editable-subject-select>
+
+<usage-panel id="ctrl.predicate.id"></usage-panel>
