Don't show usages if flag passed said so

--- a/src/components/common/deleteConfirmationModal.html
+++ b/src/components/common/deleteConfirmationModal.html
@@ -2,7 +2,7 @@
   <modal-title translate>Confirm delete</modal-title>
   <modal-body>
 
-    <div ng-if="ctrl.usage.referrers.length > 0">
+    <div ng-if="ctrl.usage && ctrl.usage.referrers.length > 0">
       <p><span translate>Following items are depending on the deleted</span> <span>{{'of ' + ctrl.entity.type | translate}}</span></p>
       <usage usage="ctrl.usage"></usage>
       <br />
