Reduce duplication between search modals

--- a/src/app.scss
+++ b/src/app.scss
@@ -559,7 +559,7 @@ modal-body {
         cursor: not-allowed;
       }
 
-      > i {
+      i {
         float: right;
         padding: 5px;
       }
