--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -52,15 +52,11 @@
         </div>
 
         <div class="col-md-4 search-results">
-          <div ng-repeat="searchResult in ctrl.searchResults track by searchResult.predicate.id"
-               ng-class="['search-result', {selected: ctrl.isSelected(searchResult), disabled: searchResult.disabled}]"
-               title="{{ctrl.searchResultTitle(searchResult)}}"
-               ng-click="ctrl.selectSearchResult(searchResult)"
-               key-control-selection>
-            <i ng-class="searchResult.predicate.glyphIconClass"></i>
-            <h5>{{searchResult.predicate | translateLabel}}</h5>
-            <p>{{searchResult.predicate.model | translateLabel}}</p>
-          </div>
+          <search-results items="ctrl.searchResults" excluded="ctrl.excludedPredicates" on-select="ctrl.selectItem(item)">
+            <i ng-class="searchResult.glyphIconClass"></i>
+            <h5>{{searchResult | translateLabel}}</h5>
+            <p>{{searchResult.model | translateLabel}}</p>
+          </search-results>
         </div>
 
         <div class="col-md-4 search-selection">
