--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -15,21 +15,22 @@
           </div>
         </div>
 
-        <label for="concept" translate>Concept</label>
-        <div class="input-group input-group-md">
-          <input id="concept"
-                 type="text"
-                 class="form-control"
-                 autofocus
-                 iow-typeahead
-                 selection-mapper="ctrl.mapSelection"
-                 options="ctrl.options"
-                 datasets="ctrl.datasets"
-                 required
-                 ng-model="ctrl.concept"
-                 placeholder="{{'Search from concept database' | translate}}"/>
-          <i class="glyphicon glyphicon-search form-control-feedback"></i>
-        </div>
+        <editable title="Concept">
+          <div class="input-group input-group-md">
+            <input id="concept"
+                   type="text"
+                   class="form-control"
+                   autofocus
+                   iow-typeahead
+                   selection-mapper="ctrl.mapSelection"
+                   options="ctrl.options"
+                   datasets="ctrl.datasets"
+                   required
+                   ng-model="ctrl.concept"
+                   placeholder="{{'Search from concept database' | translate}}"/>
+            <i class="glyphicon glyphicon-search form-control-feedback"></i>
+          </div>
+        </editable>
 
         <label for="concept" translate>Comment</label>
         <p>{{ctrl.concept.comment | translateValue}}</p>
